--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -15,22 +15,13 @@
 	-webkit-text-size-adjust: 100%;
 }
 
-a {
-	font-weight: 500;
-	color: #646cff;
-	text-decoration: inherit;
-}
-
-a:hover {
-	color: #535bf2;
-}
-
 body {
 	margin: 0;
 	display: flex;
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
+	background-color: #242424;
 }
 
 h1 {
@@ -74,10 +65,6 @@ button:focus-visible {
 	:root {
 		color: #213547;
 		background-color: #ffffff;
-	}
-
-	a:hover {
-		color: #747bff;
 	}
 
 	button {
