--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -4,7 +4,7 @@
 	line-height: 24px;
 	font-weight: 400;
 
-	color-scheme: light dark;
+	color-scheme: dark;
 	color: rgba(255, 255, 255, 0.87);
 	background-color: #242424;
 
@@ -56,12 +56,7 @@ input:focus+label {
 	outline: 4px auto -webkit-focus-ring-color;
 }
 
-.card {
-	padding: 2em;
-}
-
 #app {
-	max-width: 1280px;
 	margin: 0 auto;
 	padding: 2rem;
 	text-align: center;
