--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -30,6 +30,10 @@ h1 {
 }
 
 .button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 47px;
 	border-radius: 8px;
 	border: 1px solid transparent;
 	padding: 0.6em 1.2em;
