--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -13,6 +13,7 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+	--button-color: #1a1a1a;
 }
 
 body {
@@ -40,7 +41,7 @@ h1 {
 	font-size: 1em;
 	font-weight: 500;
 	font-family: inherit;
-	background-color: #1a1a1a;
+	background-color: var(--button-color);
 	cursor: pointer;
 	transition: border-color 0.25s;
 	color: white;
